ui_and_backend/service-ui2.yaml
apiVersion: v1
kind: Service
metadata:
  name: cors-simple-app
spec:
  selector:
    app: cors-simple-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7007
