ui_and_backend/ingress-ui2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cors-simple-app-ingress
spec:
  rules:
    - host: www.dennis.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cors-simple-app
                port:
                  number: 80
